# configscanning

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.txt  Makefile  README.md  example.env  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: actions.yaml  docker-image-to-aws-ecr.yaml  lint.yml
configscanning/: comparefiles.py  git_change_scanner.py  githuborg.py  githubrepo.py  k8sutils.py  repolisttranscriber.py  repoupdater.py
configscanning/scanners/: eodhp_scanner.py  filelister.py  modelcrd.py
tests/: test_comparefiles.py  test_githuborg.py  test_githubrepo.py  test_model_scanner.py  test_repolisttranscriber.py  test_scan_e2e.py
